--- a/views/404.ejs
+++ b/views/404.ejs
@@ -22,7 +22,7 @@
 
         <div class="row mt-3">
             <div class="col">
-                <a href="/" class="btn btn-primary">Về Trang chủ</a>
+                <a href='/' class="btn btn-primary">Về Trang chủ</a>
             </div>
         </div>
     </div>
