--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -20,6 +20,10 @@
 
     <!-- chartJS -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    
+    <script src="scripts/xlsx.full.min.js"></script>
+    <script src="scripts/statistics-chart.js"></script>
+    <script src="scripts/moment.min.js"></script>
 </head>
 <body id="body">
 
@@ -36,12 +40,12 @@
             <div class="container">
                 <div class="row text-center mb-5">
                     <div class="col">
-                        <button class="btn btn-success px-3">
+                        <button id="btnExportExcel" class="btn btn-success px-3" disabled>
                             <i class="fas fa-file-export"></i>
                             Xuất kết quả ra file Excel</button>
                     </div>
                 </div>
-                <div class="row mt-4">
+                <div class="row mt-4 text-center">
                     <div class="col">
                         <canvas id="chart"></canvas>
                     </div>
@@ -50,8 +54,14 @@
         </div>
     </div>
 
+    
+    <% if (locals.data) { %>
+        <script>
+            handleData(<%- JSON.stringify(data) %>);
+        </script>
+    <% } else { %>
+        No Data.
+    <% } %>
 
-    <script src="scripts/xlsx.full.min.js"></script>
-    <script src="scripts/statistics-chart.js"></script>
 </body>
 </html>
