--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -96,6 +96,15 @@
 
                 <div class="row text-center">
                     <div class="col-md-3 col-sm-0"></div>
+                    <div class=" alert alert-danger p-3" role="alert">
+                        Lưu ý: File dữ liệu mới khi tải lên sẽ thay thế dữ liệu hiện hành trên Máy chủ<br>
+                        Vui lòng kiểm tra kĩ dữ liệu trước khi Tải lên.
+                    </div>
+                    <div class="col-md-3 col-sm-0"></div>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col-md-3 col-sm-0"></div>
                     <div class="col-md-6 col-sm-12">
                         <div class="input-group">
                             <div class="custom-file">
